@@ -17,6 +17,7 @@ git-annex (5.20150318) UNRELEASED; urgency=medium
   * assistant: Committing a whole lot of files at once could overflow
     command-line length limits and cause the commit to fail. This
     only happened when using the assistant in an indirect mode repository.
+  * Work around curl bug when asked to download an empty url to a file.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Mar 2015 17:05:32 -0400
 
